--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -60,15 +60,7 @@
         android:layout_height="match_parent"
         android:layout_below="@id/main_toolbar"
         android:layout_above="@id/divider"
-        android:id="@+id/main_frame_layout"
-        android:visibility="invisible"/>
-
-    <FrameLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_below="@id/main_toolbar"
-        android:layout_above="@id/divider"
-        android:id="@+id/home_frame_layout"/>
+        android:id="@+id/main_frame_layout" />
 
 
     <com.google.android.material.divider.MaterialDivider
