--- a/app/src/main/res/layout/activity_profile_view.xml
+++ b/app/src/main/res/layout/activity_profile_view.xml
@@ -53,10 +53,10 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@id/main_toolbar"
-        android:layout_toLeftOf="@id/message_button"
-        android:layout_marginRight="12dp"
+        android:layout_toStartOf="@id/message_button"
+        android:layout_marginEnd="12dp"
         android:layout_marginTop="40dp"
-        android:layout_marginLeft="165dp"
+        android:layout_marginStart="165dp"
         android:text="Follow" />
 
     <Button
@@ -64,8 +64,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@id/main_toolbar"
-        android:layout_toLeftOf="@id/message_button"
-        android:layout_marginRight="12dp"
+        android:layout_toStartOf="@id/message_button"
+        android:layout_marginEnd="12dp"
         android:layout_marginTop="40dp"
         android:text="Unfollow" />
 
@@ -77,7 +77,7 @@
         android:layout_below="@id/main_toolbar"
         android:layout_alignParentEnd="true"
         android:layout_marginTop="40dp"
-        android:layout_marginRight="15dp"
+        android:layout_marginEnd="15dp"
         android:text="Message" />
 
 
@@ -127,7 +127,7 @@
             tools:text="5 \n posts" />
 
         <TextView
-            android:paddingLeft="4dp"
+            android:paddingStart="4dp"
             android:id="@+id/who_follows_me_count"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -137,7 +137,6 @@
             android:textStyle="bold"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toStartOf="@+id/who_i_follow"
-
             app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintStart_toEndOf="@+id/post_count"
             tools:text="552 \n followers" />
