--- a/app/src/main/res/layout/activity_search_user.xml
+++ b/app/src/main/res/layout/activity_search_user.xml
@@ -56,19 +56,33 @@
             android:id="@+id/search_user_btn"
             android:layout_width="40dp"
             android:layout_height="40dp"
-            android:src="@drawable/search_icon"
             android:layout_alignParentEnd="true"
             android:layout_centerVertical="true"
-            android:layout_margin="10dp"
+            android:layout_marginStart="10dp"
+            android:layout_marginTop="10dp"
+            android:layout_marginEnd="10dp"
+            android:layout_marginBottom="10dp"
             android:background="?attr/selectableItemBackgroundBorderless"
-            app:tint="@color/my_primary"/>
+            android:src="@drawable/search_icon"
+            app:tint="@color/my_primary" />
 
-
+        <ProgressBar
+            android:id="@+id/search_user_loading"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:layout_alignParentEnd="true"
+            android:layout_centerVertical="true"
+            android:layout_marginStart="10dp"
+            android:layout_marginTop="10dp"
+            android:layout_marginEnd="10dp"
+            android:layout_marginBottom="10dp"
+            android:visibility="invisible"
+            android:backgroundTint="@color/my_secondary"/>
     </RelativeLayout>
 
     <androidx.recyclerview.widget.RecyclerView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:layout_below="@id/search_user_layout"
         android:padding="10dp"
         android:id="@+id/search_user_recycler_view"/>
