--- a/app/src/main/res/layout/assure_dialog.xml
+++ b/app/src/main/res/layout/assure_dialog.xml
@@ -1,14 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:paddingBottom="10dp"
     android:layout_margin="20dp">
 
     <TextView
-        android:id="@+id/textView"
+        android:id="@+id/textviewAssure"
         android:textSize="32sp"
         android:gravity="center"
         android:layout_width="wrap_content"
@@ -19,6 +18,7 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <Button
+        android:backgroundTint="@color/my_secondary"
         android:id="@+id/cancel_button"
         android:paddingRight="35dp"
         android:paddingLeft="35dp"
@@ -28,18 +28,18 @@
         android:layout_marginEnd="50dp"
         android:text="Cancel"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView" />
+        app:layout_constraintTop_toBottomOf="@+id/textviewAssure" />
 
     <Button
         android:id="@+id/delete_button"
-        android:paddingRight="35dp"
-        android:paddingLeft="35dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="50dp"
         android:layout_marginTop="16dp"
+        android:paddingLeft="35dp"
+        android:paddingRight="35dp"
         android:text="Delete"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView" />
+        app:layout_constraintTop_toBottomOf="@+id/textviewAssure" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
