--- a/app/src/main/res/layout/edit_profile_layout.xml
+++ b/app/src/main/res/layout/edit_profile_layout.xml
@@ -80,6 +80,7 @@
         android:layout_margin="10dp">
 
         <Button
+            android:backgroundTint="@color/my_secondary"
             android:id="@+id/cancel_button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
