--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -29,6 +29,7 @@
             android:fontFamily="monospace"/>
 
         <ProgressBar
+            android:backgroundTint="@color/my_secondary"
             android:layout_marginTop="10dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"/>
