--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -1,6 +1,6 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Base.Theme.SocialMediaApp" parent="Theme.Material3.DayNight.NoActionBar">
+    <style name="Base.Theme.SocialMediaApp" parent="Theme.AppCompat.Light.NoActionBar">
         <!-- Customize your dark theme here. -->
         <!-- <item name="colorPrimary">@color/my_dark_primary</item> -->
 
@@ -17,6 +17,7 @@
         <item name="android:windowBackground">#151515</item>
 
         <item name="android:textColor">@color/white</item>
+        <item name="android:textColorHint">@color/white</item>
 
     </style>
 
