--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,6 +1,6 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Base.Theme.SocialMediaApp" parent="Theme.Material3.DayNight.NoActionBar">
+    <style name="Base.Theme.SocialMediaApp" parent="Theme.AppCompat.Light.NoActionBar">
         <!-- Customize your light theme here. -->
         <!-- <item name="colorPrimary">@color/my_light_primary</item> -->
         <item name="colorPrimary">@color/my_primary</item>
@@ -13,14 +13,16 @@
 
         <item name="android:statusBarColor">?attr/colorPrimaryVariant</item>
 
-
         <item name="android:windowBackground">@color/off_white</item>
 
         <item name="android:textColor">@color/black</item>
+        <item name="android:textColorHint">@color/black</item>
 
+        <item name="android:textSize">15dp</item>
     </style>
 
     <style name="Theme.SocialMediaApp" parent="Base.Theme.SocialMediaApp" />
 
     <color name="menuSymbols">@color/black</color>
+
 </resources>
